# gfxbench

./: .gitattributes  .gitignore  QNX_Makefile_Staging_Info  README.md  product
app_android/: CMakeLists.txt  gradle.properties  settings.gradle
app_android/app-template/: AndroidManifest-corporate.xml.in  build.gradle.in  res.values.adasbench.xml.in  res.values.colors_blue.xml  res.values.colors_green.xml  res.values.colors_yellow.xml  res.values.compubench.xml.in  res.values.gfxbench.xml.in
app_android/benchui-lib/: build.gradle
app_android/benchui-lib-corporate/: build.gradle
app_android/customcomponents/: build.gradle
app_android/gradle/: libs.versions.toml
app_ios/: CMakeLists.txt  generate_ios_images.sh  iOS-Info.plist.in  metadata.xml.in
app_ios/AppIcon.xcassets/AppIcon.appiconset/: Contents.json
app_ios/AppIcon.xcassets/LaunchImage.launchimage/: Contents.json
app_ios/archive_data/ProvisioningProfiles/: Kishonti_Developer_Wildcard.mobileprovision
app_ios/res/themes/: Grass_Green.xml  Sky_Blue.xml
app_ios/src/Cells/: APPCompareCell.h  APPCompareCell.mm  APPDeviceinfoCell.h  APPDeviceinfoCell.mm  APPDuelCell.h  APPDuelCell.mm  APPHeaderCell.h  APPHeaderCell.mm  APPHistoryCell.h  APPHistoryCell.mm  APPResultCell.h  APPResultCell.mm  APPResultDetailChartCell.h  APPResultDetailChartCell.mm  APPSimpleTestCell.h  APPSimpleTestCell.mm  APPTestCell.h  APPTestCell.mm  APPTestInfoCell.h  APPTestInfoCell.mm  NUIBaseCell.h  NUIBaseCell.mm
app_ios/src/Charts/: THChart.h  THChart.mm  THGridChart.h  THGridChart.mm  THLineChart.h  THLineChart.mm  THPolarAreaChart.h  THPolarAreaChart.mm
app_ios/src/Common/: NUIAppData.h  NUIAppData.mm  NUIAppDelegate.h  NUIAppDelegate.mm  NUICommandLineParser.h  NUICommandLineParser.mm  NUIDataViewController.h  NUIDataViewController.mm  NUIMainViewController.h  NUIMainViewController.mm  NUIRootViewController.h  NUIRootViewController.mm  THTheme.h  THTheme.mm  main.mm
app_ios/src/Controls/: APPDeviceDetailAttributesVC.h  APPDeviceDetailAttributesVC.mm  APPMainControl.h  APPMainControl.mm  APPMessageBox.h  APPMessageBox.mm  APPVerticalSelector.h  APPVerticalSelector.mm  DynamicCollectionView.h  DynamicCollectionView.mm  NUICustomTB.h  NUICustomTB.mm  NUILoadingBar.h  NUILoadingBar.mm  NUITickedTextView.h  NUITickedTextView.mm  THButton.h  THButton.mm  THDefaultDropdownObject.h  THDefaultDropdownObject.mm  THDropdown.h  THDropdown.mm  THIconicLabel.h  THIconicLabel.mm  THProgressBar.h  THProgressBar.mm
app_ios/src/Pages/: APPCompareViewController.h  APPCompareViewController.mm  APPDeviceDetailPage.h  APPDeviceDetailPage.mm  APPDeviceinfoViewController.h  APPDeviceinfoViewController.mm  APPDuelPage.h  APPDuelPage.mm  APPEulaPage.h  APPEulaPage.mm  APPFindOutMorePage.h  APPFindOutMorePage.mm  APPHomeViewController.h  APPHomeViewController.mm  APPLanguageSelectorPage.h  APPLanguageSelectorPage.mm  APPOverlayPage.h  APPOverlayPage.mm  APPPageNavigator.h  APPPageNavigator.mm  APPRegisterPage.h  APPRegisterPage.mm  APPResultDetailPage.h  APPResultDetailPage.mm  APPResultViewController.h  APPResultViewController.mm  APPSettingsViewController.h  APPSettingsViewController.mm  APPTestInfoPage.h  APPTestInfoPage.mm  NUIBasePage.h  NUILoadingViewController.h  NUILoadingViewController.mm  NUITestViewController.h  NUITestViewController.mm
app_ios/src/Utils/: KeychainItemWrapper.h  KeychainItemWrapper.mm  NSFileManagerLocations.h  NSFileManagerLocations.mm  NUIColoredImage.h  NUIColoredImage.m  NUICursor.h  NUICursor.mm  NUICursorDataSource.h  NUICursorDataSource.mm  NUIFadeCursorDataSource.h  NUIFadeCursorDataSource.mm  NUIMessageKeys.h  NUIMessageKeys.mm  NUIReachability.h  NUIReachability.mm  NUIUtilities.h  NUIUtilities.mm  NUIXmlParser.h  NUIXmlParser.mm  TestContextProvider.h  TestContextProvider.mm  UIResponder_KeyboardCacher.h  UIResponder_KeyboardCacher.mm
app_ios/src/Xibs/: APPCompareCell.xib  APPDeviceDetailPage.xib  APPDeviceinfoCell.xib  APPDuelCell.xib  APPDuelPage.xib  APPEulaPage.xib  APPFindOutMorePage.xib  APPHeaderCell.xib  APPHistoryCell.xib  APPLanguageSelectorPage.xib  APPOverlayPage.xib  APPPageNavigator.xib  APPRegisterPage.xib  APPResultCell.xib  APPResultDetailChartCell.xib  APPResultDetailPage.xib  APPSimpleTestCell.xib  APPTestCell.xib  APPTestInfoCell.xib  APPTestInfoPage.xib  (+8 more)
app_qt/: CMakeLists.txt  ccache.cmake  fixup_framework.sh  launch-c.in  launch-cxx.in  make_qrc.cmake  qt.conf.in  start.sh
app_qt/resources/: MacOSXApp.entitlements  MacOSXBundleInfo.plist.in  application.desktop.in  eula.txt  eula_escaped.txt  template.qrc.in
frameworks/benchmark_service/: CMakeLists.txt  benchmarkservice.i  benchmarkserviceConfig.cmake
frameworks/clew/: CMakeLists.txt  clew.cpp  clewConfig.cmake.in
frameworks/cmake-utils/: CMakeLists.txt  cmake-utils-config.cmake.in
frameworks/cudaw/: CMakeLists.txt  cudaw.cpp  cudawConfig.cmake.in
frameworks/kcl_framework/: CMakeLists.txt  KCLConfig.cmake.in
frameworks/krl/: CMakeLists.txt  fbo_enums.h  krl_cubemap.h  krl_material.cpp  krl_material.h  krl_mesh.cpp  krl_mesh.h  krl_scene.cpp  krl_scene.h  krl_scene_reload.cpp  krl_shadowmap.h
frameworks/ksl_compiler/: CMakeLists.txt
frameworks/ngrtl/: CMakeLists.txt  cake-install-deps.cmake  decide_which_modules.cmake  ngrtlConfig.cmake.in
frameworks/oglx/: CMakeLists.txt  Config.cmake.in  gl.h
frameworks/platform-utils/: CMakeLists.txt  battery.cpp  platform_android.cpp  platform_utils-config.cmake.in
frameworks/systeminfo/: CMakeLists.txt  props_help.js  props_spec_mockup  sysinfConfig.cmake.in  systeminfo.i
frameworks/testfw/: .clang-format  CMakeLists.txt  messagequeue.h  signal_handler.cpp  signal_handler.h  testfw.cmake  testfw.cpp  testfw.h  testfw.i  tfwmessagequeue.h  videostream.h  videostream_gstreamer.cpp  videostream_gstreamer.h  winapifamilynull.h
gfxbench/: CMakeLists.txt  tfw_package.cmake
gfxbench-data50/: CMakeLists.txt  copy_full_data45.sh
gfxbench40/: CMakeLists.txt  glbConfig.cmake.in  setup_importlib_properties  tfw_package.cmake
gfxbench50/: CMakeLists.txt  tfw_package.cmake
(+11429 files in other folders)
